# meager

./: .gitignore  .vimrc  CMakeLists.txt  README.md  compile_commands.json
base/: Corrupt.cpp  Corrupt.h  Random.cpp  Random.h  Reader.cpp  Reader.h  Setting.cpp  Setting.h  Test.cpp  Test.h  Triple.cpp  Triple.h  TripleIndex.h  Utils.cpp  Utils.h  Valid.h  erlang.cpp  global.cpp  global.h  main.cpp  main.h
base/api/: corpus.cpp  corpus.h  evaluator.cpp  evaluator.h  read.cpp  read.h  sampler.cpp  sampler.h
base/corruption/: CorruptionStrategy.h  DefaultCorruptionStrategy.h
base/evaluation/: ClassificationEvaluator.h  EntityEvaluator.h  EvaluationScore.cpp  EvaluationScore.h  EvaluationScoreCluster.h  EvaluationScoreContainer.h  EvaluationScoreGroup.h  Evaluator.h  HeadEvaluator.h  TailEvaluator.h  main.cpp
base/evaluation/metric/: CountMetricTracker.h  Metric.h  MetricSetTracker.h  MetricTracker.h  MetricTree.h  RankMetricTracker.h  ReciprocalRankMetricTracker.h  main.cpp
base/filters/: FilterPatterns.h  TripleFilter.h  main.cpp  main.h  reader.cpp  reader.h
base/patterns/: BinaryPatternRelationMap.h  InversePatternDescription.h  PatternDescriptions.h  PatternRelations.h  RelationMap.h  main.cpp  main.h
base/patterns/inverse/: InversePatternDescription.h  main.cpp  main.h  reader.cpp  reader.h
base/patterns/none/: NonePatternDescription.h  NonePatternInstance.h  main.cpp  main.h  reader.cpp  reader.h
base/patterns/symmetric/: SymmetricPatternDescription.h  SymmetricPatternInstance.h  main.cpp  main.h  reader.cpp  reader.h
base/samplers/: DefaultLocalSamplingState.h  DoubleBatch.h  GlobalSamplingState.h  LocalSamplingState.h  PatternSampler.h  Sampler.h  TripleBatch.h
base/storage/: Corpus.h  CorpusReader.h  DefaultCorpus.h  LocalCorpus.h  LocalTsvCorpus.h  OpenKECorpusReader.h
base/triple/: TripleComponentEncoder.h  TripleEncoder.h  TripleIndex.h  list.h  main.cpp  main.h  reader.cpp  reader.h  type.h
base/triple/list/: RelationScore.h  ThickTripleListWrapper.h  ThinTripleListWrapper.h  TripleList.h  main.h
base/utils/: file.cpp  main.cpp  main.h
erlang/: corpus.cpp  corpus.h  evaluator.cpp  evaluator.h  main.cpp  random.cpp  random.h  reader.cpp  reader.h  sampler.cpp  sampler.h  setting.cpp  setting.h  test.cpp  test.h  utils.cpp  utils.h
python/: main.cpp  random.cpp  reader.cpp  setting.cpp  test.cpp
src/base/: compile_commands.json  types.h
src/base/api/: corpus.cpp  corpus.h  evaluation.cpp  evaluation.h  evaluator.cpp  evaluator.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h
src/base/corpus/: Corpus.h  Default.h
src/base/corpus/local/: Corpus.h  Default.h  constants.h  count.h  has.h  import.cpp  import.h
src/base/corpus/reader/: Reader.h
src/base/corruption/: CorruptionStrategy.h  DefaultCorruptionStrategy.h  DefaultStrategy.h  LocalStrategy.h  Strategy.h
src/base/evaluation/: EntityEvaluator.h  EvaluationScore.cpp  EvaluationScoreGroup.h  Evaluator.h  HeadEvaluator.h  Stopwatch.h  TailEvaluator.h  main.cpp  main.h
src/base/evaluation/link-prediction/: Entity.h  Evaluator.h  Head.h  Tail.h  main.h
src/base/evaluation/metric/: CountMetricTracker.h  Metric.h  MetricSetTracker.h  MetricTree.cpp  MetricTree.h  RankMetricTracker.h  Tree.cpp  Tree.h  main.cpp  main.h
src/base/evaluation/triple-classification/: Evaluator.h  main.h
src/base/filters/: FilterPatterns.h  TripleFilter.h
src/base/patterns/: BinaryPatternRelationMap.h  PatternDescription.h  PatternDescriptionTemplates.h  PatternDescriptions.h  UnaryPatternRelationSet.h  main.h
src/base/samplers/: DefaultLocalSamplingState.h  GlobalSamplingState.h  LocalSamplingState.h  PatternSampler.h  Sampler.h  TripleBatch.h
src/base/sampling/: Pattern.h  Sampler.h
src/base/storage/: Corpus.h  CorpusReader.h  DefaultCorpus.h  LocalCorpus.h  LocalTsvCorpus.h  OpenKECorpusReader.h
src/base/triple/: ComponentEncoder.h  ComponentFrequencies.h  Encoder.h  Frequencies.h  Triple.h  TripleComponentEncoder.h  TripleEncoder.h  TripleIndex.h  main.cpp  main.h  reader.cpp  reader.h  type.h
src/base/utils/: Stopwatch.h  file.cpp  main.cpp  main.h
src/erlang/: corpus.cpp  corpus.h  evaluation.cpp  evaluation.h  evaluator.cpp  evaluator.h  main.cpp  random.cpp  reader.cpp  sampler.cpp  sampler.h  sampling.cpp  sampling.h  setting.cpp  setting.h  test.cpp  test.h  utils.cpp  utils.h
src/erlang/utils/: main.cpp  main.h
src/python/: corpus.cpp  delete.cpp  evaluation.cpp  random.cpp  sampling.cpp  setting.cpp  utils.cpp  utils.h
src/python/utils/: main.cpp  main.h
test/: CMakeLists.txt  compile_commands.json  stopwatch.cpp
tools/: clean.sh
(+79 files in other folders)
